GDE-64: Card list alignment and IE fixes.
* Fix alignment issue for last item.
* Improve IE10 support.

--- a/docroot/themes/custom/govcms_uikit_starterkit/sass/components/_card_list.scss
+++ b/docroot/themes/custom/govcms_uikit_starterkit/sass/components/_card_list.scss
@@ -2,9 +2,10 @@
   box-sizing: border-box;
 
   @include uikit-media("sm") {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   .card {
@@ -15,11 +16,29 @@
 
     @include uikit-media("sm") {
       display: inline-block;
-      flex-basis: calc(50% - 2%);
+      width: 48%;
+      margin-right: 4%;
+    }
+
+    &:nth-child(2n) {
+      @include uikit-media("sm") {
+        margin-right: 0;
+      }
+
+      @include uikit-media("md") {
+        margin-right: 4%;
+      }
     }
 
     @include uikit-media("md") {
-      flex-basis: calc(25% - 2%);
+      width: 22%;
+      margin-right: 4%;
+    }
+
+    &:nth-child(4n) {
+      @include uikit-media("md") {
+        margin-right: 0;
+      }
     }
 
     img {
