--- a/docroot/themes/custom/govcms_uikit_starterkit/sass/layout/_views.scss
+++ b/docroot/themes/custom/govcms_uikit_starterkit/sass/layout/_views.scss
@@ -6,9 +6,10 @@
 .view {
   .views-infinite-scroll-content-wrapper {
     @include uikit-media("sm") {
+      width: 100%;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: flex-start;
     }
   }
 
